po: update po/sr_RS@latin/case.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/case.po
+++ b/po/sr_RS@latin/case.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-19 10:00+0000\n"
+"PO-Revision-Date: 2017-01-22 20:51+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -99,11 +99,11 @@ msgstr "Subjekat aktivnosti %1 '%2'"
 
 #: CRM/Case/BAO/Query.php
 msgid "Case Subject %1 '%2'"
-msgstr ""
+msgstr "Subjekat predmeta %1 '%2'"
 
 #: CRM/Case/BAO/Query.php
 msgid "Activity Reporter %1 '%2'"
-msgstr "Reporter aktivnovsti %1 '%2'"
+msgstr "Reporter aktivnosti %1 '%2'"
 
 #: CRM/Case/BAO/Query.php
 msgid "Activity Actual Date %1 %2"
@@ -548,13 +548,13 @@ msgstr "Nije moguće naći konfiguracioni fajl za tip slučaja  = '%1' %2."
 #: CRM/Case/XMLProcessor/Process.php
 msgid ""
 "Unable to load configuration file for the referenced case type: '%1' %2."
-msgstr ""
+msgstr "Nije moguće učitati konfiguracioni fajl za tip slučaja: '%1' %2."
 
 #: CRM/Case/XMLProcessor/Process.php
 msgid ""
 "Relationship type %1, found in case configuration file, is not present in "
 "the database %2"
-msgstr ""
+msgstr "Tip veze %1, nađen u konfiguracionom fajlu predmeta nije prisutan u bazi podataka %2"
 
 #: CRM/Case/XMLProcessor/Process.php
 msgid ""
@@ -604,7 +604,7 @@ msgstr ""
 
 #: CRM/Case/xml/configuration.sample/case_sample.mysql.tpl
 msgid "Case Resources"
-msgstr ""
+msgstr "Resursi predmeta"
 
 #: ang/crmCaseType/activityTypesTable.html
 msgid "Max Instances"
@@ -648,7 +648,7 @@ msgstr "Vremenska linija"
 
 #: ang/crmCaseType/edit.html
 msgid "Sequence"
-msgstr ""
+msgstr "Sekvenca"
 
 #: ang/crmCaseType/list.html
 msgid ""
@@ -1003,7 +1003,7 @@ msgstr "Nema definisanih aktivnosti za ovaj predmet."
 msgid ""
 "You need to setup and load Case and Activity configuration files before you "
 "can begin using the CiviCase component."
-msgstr ""
+msgstr "Morate podesiti i učitati konfiguracione fajlove za predmete i aktivnosti pre nego što počnete sa korišćenjem CiviCase komponente."
 
 #: templates/CRM/Case/Page/ConfigureError.tpl
 msgid "Refer to the %1 to learn about this process."
@@ -1187,4 +1187,4 @@ msgstr "Eksport dokumenta"
 
 #: templates/CRM/Case/Form/CaseView.tpl
 msgid "Are you sure you want to end this relationship?"
-msgstr ""
+msgstr "Da li ste sigurni da želite da završite ovu vezu?"
