po: update po/pt_BR/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/pt_BR/admin.po
+++ b/po/pt_BR/admin.po
@@ -6,7 +6,7 @@
 # Cristiane Lima <tiane.ash@uol.com.br>, 2016
 # Débora Maia <debora@dotpro.com.br>, 2016
 # Diego Viegas <diego.viegas@dotpro.com.br>, 2012-2013
-# Diego Viegas <diego.viegas@dotpro.com.br>, 2012-2016
+# Diego Viegas <diego.viegas@dotpro.com.br>, 2012-2017
 # Diego Viegas <diego.viegas@dotpro.com.br>, 2013
 #   <diego.viegas@dotproject.com.br>, 2011-2012
 # drero <dreroips@yahoo.com.br>, 2012
@@ -26,12 +26,12 @@
 # ramalhotech <ramalho.tech@gmail.com>, 2015
 # Samir Young Jun Zampiva <samireu@gmail.com>, 2013
 # Samir Young Jun Zampiva <samireu@gmail.com>, 2013
-# Thalita Nick Pinheiro Gomes <thalitanpg@gmail.com>, 2014
+# Thalita Nick Pinheiro <thalitanpg@gmail.com>, 2014
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-12-08 19:50+0000\n"
+"PO-Revision-Date: 2017-01-23 05:28+0000\n"
 "Last-Translator: Diego Viegas <diego.viegas@dotpro.com.br>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/civicrm/civicrm/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
@@ -4299,7 +4299,7 @@ msgstr "Tag reservada não pode ser excluída. Os usuários com permissão 'Admi
 
 #: templates/CRM/Admin/Form/Tag.tpl
 msgid "Defines if you can select this tag."
-msgstr ""
+msgstr "Define se você pode selecionar esta etiqueta."
 
 #: templates/CRM/Admin/Form/Tag.tpl
 msgid "Are you sure you want to delete <b>%1</b> Tag?"
@@ -4408,7 +4408,7 @@ msgstr "Uma lista separada por vírgulas será automaticamente transformado em u
 
 #: templates/CRM/Admin/Page/APIExplorer.js
 msgid "Choose a field not in this list"
-msgstr ""
+msgstr "Escolha um campo fora desta lista"
 
 #: templates/CRM/Admin/Page/APIExplorer.js
 msgid "Fields to return"
@@ -6534,7 +6534,7 @@ msgstr "Usar língua em uso ao mesmo tempo"
 
 #: CRM/Admin/Form/Setting/Miscellaneous.php
 msgid "Illegal stack size. Use values between 1 and %1."
-msgstr ""
+msgstr "Tamanho de pilha ilegal. Use valores entre 1 e %1."
 
 #: CRM/Admin/Form/Setting.php
 msgid "Save Failed"
@@ -6593,29 +6593,29 @@ msgstr "Oculto permanentemente"
 msgid ""
 "Do not run this job before this date / time. The run frequency selected "
 "above will apply thereafter."
-msgstr ""
+msgstr "Não execute esta tarefa antes desta data / hora. A frequência de execução selecionada será aplicada a partir deste ponto."
 
 #: templates/CRM/Admin/Form/Job.tpl
 msgid "Leave blank to run as soon as possible."
-msgstr ""
+msgstr "Deixe em branco para executar assim que possível."
 
 #: templates/CRM/Admin/Form/Job.tpl
 msgid "Leave blank to run at next run frequency."
-msgstr ""
+msgstr "Deixe em branco para executar no próximo agendamento."
 
 #: templates/CRM/Admin/Form/MessageTemplates.tpl
 msgid ""
 "Compose a message on-screen for general use in emails or document output, or"
 " upload a pre-composed document for mail-merge."
-msgstr ""
+msgstr "Componha uma mensagem na tela para uso geral em emails ou documentos criados, ou envie um documento pré-editado para mesclagem da mensagem."
 
 #: templates/CRM/Admin/Form/MessageTemplates.tpl
 msgid "Upload the document in .docx or .odt format."
-msgstr ""
+msgstr "Envio o documento em formato .docx ou .odt."
 
 #: templates/CRM/Admin/Form/Preferences/Contribute.hlp
 msgid "Access Control by Financial Type"
-msgstr ""
+msgstr "Controle de Acesso por Tipo Financeiro"
 
 #: templates/CRM/Admin/Form/Preferences/Contribute.hlp
 msgid ""
@@ -6682,17 +6682,17 @@ msgstr ""
 
 #: templates/CRM/Admin/Form/Setting/Localization.hlp
 msgid "Format for displaying monetary amounts with currency symbol."
-msgstr ""
+msgstr "Formato para a exibição de quantias monetárias com símbolo da moeda."
 
 #: templates/CRM/Admin/Form/Setting/Localization.hlp
 msgid "Format for displaying monetary values without the currency symbol."
-msgstr ""
+msgstr "Formato para exibição de valores monetários sem o símbolo da moeda."
 
 #: templates/CRM/Admin/Form/Setting/Localization.hlp
 msgid ""
 "You may override the ts() function in CiviCRM by defining your own "
 "translation function."
-msgstr ""
+msgstr "Você pode sobrescrever a função ts() no CiviCRM definindo sua próprio função de tradução."
 
 #: templates/CRM/Admin/Form/Setting/Localization.tpl
 msgid "Configure CiviCRM for your country and language."
@@ -6747,19 +6747,19 @@ msgstr ""
 msgid ""
 "You may configure these upload directories using absolute paths or path "
 "variables."
-msgstr ""
+msgstr "Você pode configurar estes diretório de upload usando caminhos absolutos ou variáveis de caminho."
 
 #: templates/CRM/Admin/Form/Setting/Path.tpl
 msgid ""
 "If you modify the defaults, make sure that your web server has write access "
 "to the directories."
-msgstr ""
+msgstr "Se você modificar os padrões, certifique-se que seu servidor web possua direito de escrita nestes diretórios."
 
 #: templates/CRM/Admin/Form/Setting/UpdateConfigBackend.tpl
 msgid ""
 "When migrating a site to a new server, the paths and URLs of your CiviCRM "
 "installation may change. "
-msgstr ""
+msgstr "Quando migrar o site para um novo servidores, os caminhos e URLs de sua instalação CiviCRM podem mudar."
 
 #: templates/CRM/Admin/Form/Setting/UpdateConfigBackend.tpl
 msgid ""
@@ -6790,7 +6790,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Form/Setting/Url.hlp
 msgid "URL Variables"
-msgstr ""
+msgstr "Variáveis de URL"
 
 #: templates/CRM/Admin/Form/Setting/Url.tpl
 msgid ""
