po: update po/sr_RS@latin/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/admin.po
+++ b/po/sr_RS@latin/admin.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-19 14:36+0000\n"
-"Last-Translator: Marinela Panić <marinela@catalystbalkans.org>\n"
+"PO-Revision-Date: 2017-01-22 19:12+0000\n"
+"Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -94,7 +94,7 @@ msgstr "Ekstenzija deinstalirana"
 msgid ""
 "Cannot uninstall this extension - there is at least one payment processor "
 "using the payment processor type provided by it."
-msgstr ""
+msgstr "Nemoguće je deinstalirati ovu ekstenziju - postoji barem jedan procesor uplata koji koristi tip procesora uplate iz ove ekstenzije."
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Uninstall Error"
@@ -593,11 +593,11 @@ msgstr "Podaci:"
 
 #: CRM/Admin/Form/Persistent.php
 msgid "DB Template has been added successfully."
-msgstr ""
+msgstr "DB šablon je uspešno dodat."
 
 #: CRM/Admin/Form/Persistent.php
 msgid "DB Template has been updated successfully."
-msgstr ""
+msgstr "DB šablon je uspešno ažuriran"
 
 #: CRM/Admin/Form/Preferences/Address.php
 msgid "Settings - Addresses"
@@ -614,7 +614,7 @@ msgstr "URL veb servisa"
 
 #: CRM/Admin/Form/Preferences/Address.php
 msgid "Address Standardization features require PHP version 5 or greater."
-msgstr ""
+msgstr "Funkcionalnosti standardizacije adrese zahtevaju PHP verziju 5 ili više."
 
 #: CRM/Admin/Form/Preferences/Address.php
 msgid "You must provide values for all three Address Standarization fields."
@@ -782,7 +782,7 @@ msgstr "Unosi za kontrolnu tablu"
 msgid ""
 "Configure how many events should be shown on the dashboard. This overrides "
 "the default value of 10 entries."
-msgstr ""
+msgstr "Podesite koliko događaja treba da bude prikazano na kontrolnoj tabli. Ovo će redefinisati podrazumevanu vrednost od 10 unosa."
 
 #: CRM/Admin/Form/Preferences/Event.php
 msgid "show all"
@@ -794,7 +794,7 @@ msgstr "Podešavanja CiviMail komponente"
 
 #: CRM/Admin/Form/Preferences/Mailing.php
 msgid "Enable Double Opt-in for Profile Group(s) field"
-msgstr ""
+msgstr "Uključi duplu prijavu za polje za grupu(grupe) profila "
 
 #: CRM/Admin/Form/Preferences/Mailing.php
 msgid ""
@@ -888,7 +888,7 @@ msgstr "Podešavanja CiviMember komponente"
 
 #: CRM/Admin/Form/Preferences/Member.php
 msgid "Default online membership renewal page"
-msgstr ""
+msgstr "Podrazumevana stranica za onlajn obnovu članstva"
 
 #: CRM/Admin/Form/Preferences/Member.php
 msgid ""
@@ -936,7 +936,7 @@ msgstr "Format"
 
 #: CRM/Admin/Form/PreferencesDate.php
 msgid "- default input format -"
-msgstr ""
+msgstr "- podrazumevani format unosa -"
 
 #: CRM/Admin/Form/PreferencesDate.php
 msgid "Value must be an integer."
@@ -1200,11 +1200,11 @@ msgstr "Dostupne države i provincije"
 
 #: CRM/Admin/Form/Setting/Localization.php
 msgid "Default Country"
-msgstr ""
+msgstr "Podrazumevana zemlja"
 
 #: CRM/Admin/Form/Setting/Localization.php
 msgid "Default State/Province"
-msgstr ""
+msgstr "Podrazumevana Država/Pokrajina"
 
 #: CRM/Admin/Form/Setting/Localization.php
 msgid "Default Currency"
@@ -1250,7 +1250,7 @@ msgstr ""
 #: CRM/Admin/Form/Setting/Localization.php
 msgid ""
 "Please select a default country that is in the list of available countries."
-msgstr ""
+msgstr "Izaberite podrazumevanu zemlju koja je u listi dostupnih zemalja."
 
 #: CRM/Admin/Form/Setting/Mail.php
 msgid "Settings - CiviMail"
@@ -1270,15 +1270,15 @@ msgstr ""
 
 #: CRM/Admin/Form/Setting/Mail.php
 msgid "Mailer Job Size"
-msgstr ""
+msgstr "Veličina mailer posla"
 
 #: CRM/Admin/Form/Setting/Mail.php
 msgid "Mailer CRON job limit"
-msgstr ""
+msgstr "Limit mailer CRON posla"
 
 #: CRM/Admin/Form/Setting/Mail.php
 msgid "The job size must be at least 1000 or set to 0 (unlimited)."
-msgstr ""
+msgstr "Veličina posla mora biti barem 1000 ili podešena na 0 (bez limita)."
 
 #: CRM/Admin/Form/Setting/Mail.php
 msgid ""
@@ -1496,7 +1496,7 @@ msgstr ""
 msgid ""
 "Cannot send a test email because your user record does not have a valid "
 "email address."
-msgstr ""
+msgstr "Nemoguće je poslati test email zato što vaš zapis o korisniku ne sadrži važeću email adresu."
 
 #: CRM/Admin/Form/Setting/Smtp.php
 msgid "Sending test email. FROM: %1 TO: %2.<br />"
@@ -1687,7 +1687,7 @@ msgstr ""
 
 #: CRM/Admin/Page/AJAX.php
 msgid "Are you sure you want to disable this financial account?"
-msgstr ""
+msgstr "Da li ste sigurni da želite da isključite ovaj finansijski račun?"
 
 #: CRM/Admin/Page/AJAX.php
 msgid "Are you sure you want to disable this payment processor?"
@@ -2199,11 +2199,11 @@ msgstr ""
 
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid "After your site has migrated to a new URL."
-msgstr ""
+msgstr "Nakon što je vaš sajt premešten na novi URL."
 
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid "After the application has migrated to a new URL."
-msgstr ""
+msgstr "Nakon što je vaša aplikacija premeštena na novi URL."
 
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid "After the application has changed permission requirements."
@@ -2285,7 +2285,7 @@ msgstr "%1: Isključi se"
 msgid ""
 "Are you sure you want to disconnect \"%1?\". Doing so may permanently "
 "destroy data linkage."
-msgstr ""
+msgstr "Da li ste sigurni da želite da prekinete vezu sa \"%1?\". Ukoliko to učinite, moguće je da će povezanost podataka biti trajno prekinuta."
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "Disconnect"
@@ -2414,14 +2414,14 @@ msgstr ""
 msgid ""
 "WARNING: Uninstalling this extension might result in the loss of all records"
 " which use the extension."
-msgstr ""
+msgstr "UPOZORENJE: Deinstalacijom ove ekstenzije može doći do gubitka zapisa koji je koriste."
 
 #: templates/CRM/Admin/Form/Extensions.tpl
 msgid ""
 "This may mean the loss of a substantial amount of data, and the action "
 "cannot be undone. Please review the extension information below before you "
 "make final decision."
-msgstr ""
+msgstr "Ovo će dovesti do gubitka značajne količine podataka, i ova operacija je nepovratna. Pregledajte informacije o ekstenziji ispod pre nego što donesete konačnu odluku."
 
 #: templates/CRM/Admin/Form/Extensions.tpl
 msgid ""
@@ -2448,7 +2448,7 @@ msgstr "Izvrši zakazani posao"
 msgid ""
 "WARNING: Deleting this Scheduled Job will cause some important site "
 "functionality to stop working."
-msgstr ""
+msgstr "UPOZORENJE: Brisanje ovog zakazanog posla će dovesti do prestanka rada bitnih funkcija sajta."
 
 #: templates/CRM/Admin/Form/Job.tpl
 msgid "API call:"
@@ -2571,7 +2571,7 @@ msgstr "Obriši šablon poruke"
 
 #: templates/CRM/Admin/Form/MessageTemplates.tpl
 msgid "Use this form to add or edit re-usable message templates."
-msgstr ""
+msgstr "Koristite ovaj formular da dodate ili uredite šablone poruka koji se mogu koristiti više puta."
 
 #: templates/CRM/Admin/Form/MessageTemplates.tpl
 msgid "Do you want to delete this message template?"
@@ -2579,7 +2579,7 @@ msgstr "Da li želite da obrišete ovaj šablon poruke?"
 
 #: templates/CRM/Admin/Form/MessageTemplates.tpl
 msgid "Descriptive title of message - used for template selection."
-msgstr ""
+msgstr "Opisni naziv poruke - koristi se u selekciji šablona."
 
 #: templates/CRM/Admin/Form/MessageTemplates.tpl
 msgid "Subject for email message."
@@ -2771,7 +2771,7 @@ msgstr "UPOZORENJE: Brisanjem statusa učesnika se brišu i sva podešavanja za 
 
 #: templates/CRM/Admin/Form/ParticipantStatusType.tpl
 msgid "Name of this status type, for use in the code."
-msgstr ""
+msgstr "Ime ovog tipa statusa, koje će se koristiti u kodu"
 
 #: templates/CRM/Admin/Form/ParticipantStatusType.tpl
 msgid "Display label for this status."
