po: update po/sr_RS@latin/menu.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/menu.po
+++ b/po/sr_RS@latin/menu.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-19 04:59+0000\n"
+"PO-Revision-Date: 2017-01-22 21:24+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -259,7 +259,7 @@ msgstr "Finansijski računi"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Payment Instruments"
-msgstr ""
+msgstr "Sredstva plaćanja"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -279,7 +279,7 @@ msgstr "Donacije"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Recurring Contributions"
-msgstr ""
+msgstr "Periodične donacije"
 
 msgctxt "menu"
 msgid "Additional Info"
@@ -305,7 +305,7 @@ msgstr "Otkaži pretplatu"
 
 msgctxt "menu"
 msgid "Update Billing Details"
-msgstr ""
+msgstr "Ažurirajte detalje o naplati"
 
 msgctxt "menu"
 msgid "Update Subscription"
@@ -439,7 +439,7 @@ msgstr "Tip aktivnosti"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Relationship Types"
-msgstr ""
+msgstr "Tipovi veza"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -474,12 +474,12 @@ msgstr "Tipovi vebsajtova"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Instant Messenger Services"
-msgstr ""
+msgstr "Instant Messenger usluge"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Mobile Phone Providers"
-msgstr ""
+msgstr "Provajderi mobilne telefonije"
 
 msgctxt "menu"
 msgid "Phone Type"
@@ -637,7 +637,7 @@ msgstr "Mapiranje i Geokoding"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Misc (Undelete, PDFs, Limits, Logging, Captcha, etc.)"
-msgstr ""
+msgstr "Ostalo (PDFovi, limiti, logovanje, Captcha, itd.)"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1172,7 +1172,7 @@ msgstr "Podešavanja mailera"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Headers, Footers, and Automated Messages"
-msgstr ""
+msgstr "Zaglavlja, podnožja i automatizovane poruke"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1408,22 +1408,22 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "New Batch"
-msgstr ""
+msgstr "Nova serija"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Open Batches"
-msgstr ""
+msgstr "Otvorene serije"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Closed Batches"
-msgstr ""
+msgstr "Zatvorene serije"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Exported Batches"
-msgstr ""
+msgstr "Eksportovane serije"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1628,7 +1628,7 @@ msgstr "Procesori uplate"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Safe File Extensions"
-msgstr ""
+msgstr "Bezbedne ekstenzije fajlova"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1673,7 +1673,7 @@ msgstr "Uloge učesnika"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Participant Listing Options"
-msgstr ""
+msgstr "Opcije listinga učesnika"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1703,7 +1703,7 @@ msgstr "Podrška"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Get started"
-msgstr ""
+msgstr "Prvi koraci"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1796,12 +1796,12 @@ msgctxt "menu"
 msgid ""
 "Provides detail list of employer employee relationships along with "
 "employment details."
-msgstr ""
+msgstr "Daje detaljnu listu veza između poslodavaca i zaposlenih zajedno sa detaljnim informacijama o zaposlenju."
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Gives relationship details between two contacts"
-msgstr ""
+msgstr "Daje detalje veze između dva kontakta."
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1930,7 +1930,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Personal Campaign Page Summary"
-msgstr ""
+msgstr "Kratak pregled stranice lične kampanje"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
