po: update po/sr_RS@latin/financial.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/financial.po
+++ b/po/sr_RS@latin/financial.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-20 12:21+0000\n"
+"PO-Revision-Date: 2017-01-22 22:51+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -39,7 +39,7 @@ msgstr "Sredstvo plaćanja:"
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Batch"
-msgstr ""
+msgstr "Serija"
 
 #: CRM/Financial/BAO/FinancialAccount.php
 msgid ""
@@ -85,13 +85,13 @@ msgstr ""
 
 #: CRM/Financial/BAO/PaymentProcessor.php
 msgid "Could not retrieve payment processor details"
-msgstr ""
+msgstr "Nemoguće je dobiti detaljne informacije o procesoru uplata"
 
 #: CRM/Financial/BAO/PaymentProcessorType.php
 msgid ""
 "There is a Payment Processor associated with selected Payment Processor "
 "type, hence it can not be deleted."
-msgstr ""
+msgstr "Postoji procesor uplata koji je povezan sa odabranim tipom procesora uplata, tako da tip procesora ne može biti obrisan."
 
 #: CRM/Financial/BAO/PaymentProcessorType.php
 msgid "Selected Payment Processor type has been deleted.<br/>"
@@ -130,7 +130,7 @@ msgstr ""
 #: CRM/Financial/DAO/FinancialAccount.php
 #: CRM/Financial/Form/FinancialAccount.php
 msgid "Account Type Code"
-msgstr ""
+msgstr "Šifra tipa računa"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Financial Account Description"
@@ -158,15 +158,15 @@ msgstr ""
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Reserved Financial Account?"
-msgstr ""
+msgstr "Rezervisani finansijski račun?"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Financial Account is Active"
-msgstr ""
+msgstr "Finansijski račun je aktivan"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Default Financial Account"
-msgstr ""
+msgstr "Podrazumevani finansijski račun"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Transaction ID"
@@ -174,19 +174,19 @@ msgstr "ID finansijske transakcije"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Transaction From Account"
-msgstr ""
+msgstr "Finansijska transakcija sa računa"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Transaction To Account"
-msgstr ""
+msgstr "Finansijska transakcija na račun"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Transaction Date"
-msgstr ""
+msgstr "Datum finansijske transakcije"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Total Amount"
-msgstr ""
+msgstr "Ukupan iznos "
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Fee Amount"
@@ -198,7 +198,7 @@ msgstr ""
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Currency"
-msgstr ""
+msgstr "Finansijska valuta"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Transaction Result Code"
@@ -206,7 +206,7 @@ msgstr ""
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Transaction Status Id"
-msgstr ""
+msgstr "ID statusa finansijske transakcije"
 
 #: CRM/Financial/DAO/FinancialType.php
 msgid "Is Tax Deductible?"
@@ -260,7 +260,7 @@ msgstr ""
 
 #: CRM/Financial/DAO/PaymentProcessor.php
 msgid "Processor Supports Recurring?"
-msgstr ""
+msgstr "Procesor podržava periodične donacije?"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Payment Processor variable name to be used in code"
@@ -272,27 +272,27 @@ msgstr ""
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Processor Type Description"
-msgstr ""
+msgstr "Opis tipa procesora"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Processor Type Is Active?"
-msgstr ""
+msgstr "Tip procesora je aktivan?"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Processor Type is Default?"
-msgstr ""
+msgstr "Tip procesora je podrazumevani?"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Label for User Name if used"
-msgstr ""
+msgstr "Oznaka za korisničko ime ukoliko se koristi"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Label for password"
-msgstr ""
+msgstr "Oznaka za šifru"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Label for Signature"
-msgstr ""
+msgstr "Oznaka za potpis"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Label for Subject"
@@ -332,19 +332,19 @@ msgstr ""
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Processor Type Supports Recurring?"
-msgstr ""
+msgstr "Tip procesora podržava periodične donacije?"
 
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Processor Type Payment Type"
-msgstr ""
+msgstr "Tip uplate tipa procesora"
 
 #: CRM/Financial/DAO/PaymentToken.php
 msgid "Created ID"
-msgstr ""
+msgstr "Kreirano ID"
 
 #: CRM/Financial/DAO/PaymentToken.php
 msgid "Expiry Date"
-msgstr ""
+msgstr "Datum isteka"
 
 #: CRM/Financial/DAO/PaymentToken.php
 msgid "Masked Account Number"
@@ -360,11 +360,11 @@ msgstr ""
 
 #: CRM/Financial/Form/BatchTransaction.php
 msgid "Entered Transactions"
-msgstr ""
+msgstr "Unešene transakcije"
 
 #: CRM/Financial/Form/BatchTransaction.php
 msgid "Assigned Transactions"
-msgstr ""
+msgstr "Dodeljene transakcije"
 
 #: CRM/Financial/Form/BatchTransaction.php
 msgid "Entered Total"
@@ -388,11 +388,11 @@ msgstr "- akcije -"
 
 #: CRM/Financial/Form/BatchTransaction.php
 msgid "Remove from Batch"
-msgstr ""
+msgstr "Ukloni iz serije"
 
 #: CRM/Financial/Form/BatchTransaction.php
 msgid "Assign to Batch"
-msgstr ""
+msgstr "Dodeli u seriju"
 
 #: CRM/Financial/Form/BatchTransaction.php
 msgid "Assign"
@@ -404,11 +404,11 @@ msgstr "Dodeli transakciju"
 
 #: CRM/Financial/Form/Export.php
 msgid "You cannot exported the batches which were exported earlier."
-msgstr ""
+msgstr "Ne možete eksportovati serije koje su ranije eksportovane"
 
 #: CRM/Financial/Form/Export.php
 msgid "Export to IIF"
-msgstr ""
+msgstr "Eksport u IIF"
 
 #: CRM/Financial/Form/FinancialAccount.php
 msgid ""
@@ -425,7 +425,7 @@ msgstr ""
 
 #: CRM/Financial/Form/FinancialAccount.php
 msgid "Owner"
-msgstr ""
+msgstr "Vlasnik"
 
 #: CRM/Financial/Form/FinancialAccount.php
 #: CRM/Financial/Form/FinancialType.php
@@ -454,15 +454,15 @@ msgstr ""
 
 #: CRM/Financial/Form/FinancialAccount.php
 msgid "Selected Financial Account has been deleted."
-msgstr ""
+msgstr "Odabrani finansijski račun je obrisan."
 
 #: CRM/Financial/Form/FinancialAccount.php
 msgid "The Financial Account '%1' has been saved."
-msgstr ""
+msgstr "Finansijski račun '%1' je sačuvan"
 
 #: CRM/Financial/Form/FinancialBatch.php
 msgid "Financial Batch"
-msgstr ""
+msgstr "Finansijska serija"
 
 #: CRM/Financial/Form/FinancialBatch.php
 msgid "Accounting Batch"
@@ -491,11 +491,11 @@ msgstr "Datum kreiranja ne može biti veći od trenutnog datuma"
 
 #: CRM/Financial/Form/FinancialBatch.php
 msgid "This name already exists in database. Batch names must be unique."
-msgstr ""
+msgstr "Ovo ime već postoji u bazi. Imena serija moraju biti jedinstvena."
 
 #: CRM/Financial/Form/FinancialBatch.php
 msgid "'%1' batch has been saved."
-msgstr ""
+msgstr "Serija '%1' je sačuvana."
 
 #: CRM/Financial/Form/FinancialBatch.php
 msgid "You dont have permission to %1 this batch"
@@ -545,7 +545,7 @@ msgstr "Račun finansijskog tipa"
 
 #: CRM/Financial/Form/FinancialTypeAccount.php
 msgid "Financial Account Relationship"
-msgstr ""
+msgstr "Veza finansijskog računa"
 
 #: CRM/Financial/Form/FinancialTypeAccount.php
 msgid "Is Tax? must be set for respective financial account"
@@ -553,11 +553,11 @@ msgstr ""
 
 #: CRM/Financial/Form/FinancialTypeAccount.php
 msgid "This account relationship already exits"
-msgstr ""
+msgstr "Ova veza računa već postoji"
 
 #: CRM/Financial/Form/FinancialTypeAccount.php
 msgid "Selected financial type account has been deleted."
-msgstr ""
+msgstr "Odabrani tip finansija je obrisan."
 
 #: CRM/Financial/Form/FinancialTypeAccount.php
 msgid "The financial type Account has been saved."
@@ -569,7 +569,7 @@ msgstr ""
 
 #: CRM/Financial/Page/AJAX.php
 msgid "- Select Financial Account Relationship -"
-msgstr ""
+msgstr "- odaberite vezu finansijskog računa -"
 
 #: CRM/Financial/Page/AJAX.php
 msgid ""
@@ -644,11 +644,11 @@ msgstr "Metod plaćanja"
 
 #: templates/CRM/Financial/Form/BatchTransaction.tpl
 msgid "Please select one or more contributions for this action."
-msgstr ""
+msgstr "Izaberite jednu ili više donacija za ovu akciju."
 
 #: templates/CRM/Financial/Form/BatchTransaction.tpl
 msgid "Please select an action from the drop-down menu."
-msgstr ""
+msgstr "Izaberite akciju iz padajućeg menija."
 
 #: templates/CRM/Financial/Form/Export.tpl
 msgid ""
@@ -664,7 +664,7 @@ msgstr "Brisanje finansijskog tipa je nepovratna operacija."
 
 #: templates/CRM/Financial/Form/FinancialAccount.tpl
 msgid "Use this field to indicate the organization that owns this account."
-msgstr ""
+msgstr "Koristite ovo polje da ukažete koja organizacija je u vlasništvu ovog računa."
 
 #: templates/CRM/Financial/Form/FinancialAccount.tpl
 msgid ""
@@ -783,7 +783,7 @@ msgstr "Očekivano"
 #: templates/CRM/Financial/Form/Search.tpl
 #: templates/CRM/Financial/Page/BatchTransaction.tpl
 msgid "Click OK to override and update expected values."
-msgstr ""
+msgstr "Kliknite OK da izmenite i ažurirate očekivane vrednosti."
 
 #: templates/CRM/Financial/Form/Search.tpl
 msgid "Updated"
@@ -814,19 +814,19 @@ msgstr "Nema odgovora od servera. Proverite vašu internet konekciju i pokušajt
 
 #: templates/CRM/Financial/Form/Search.tpl
 msgid "Please select an action from the menu."
-msgstr ""
+msgstr "Izaberite akciju iz menija."
 
 #: templates/CRM/Financial/Form/Search.tpl
 msgid "No Action Selected"
-msgstr ""
+msgstr "Akcija nije odabrana"
 
 #: templates/CRM/Financial/Form/Search.tpl
 msgid "Please select one or more batches for this action."
-msgstr ""
+msgstr "Izaberite jednu ili više serija za ovu akciju."
 
 #: templates/CRM/Financial/Form/Search.tpl
 msgid "No Batches Selected"
-msgstr ""
+msgstr "Nema odabranih serija"
 
 #: templates/CRM/Financial/Page/BatchTransaction.tpl
 msgid "Updating"
@@ -834,11 +834,11 @@ msgstr "Ažuriranje"
 
 #: templates/CRM/Financial/Page/BatchTransaction.tpl
 msgid "Are you sure you want to close this batch?"
-msgstr ""
+msgstr "Da li ste sigurni da želite da zatvorite ovu seriju?"
 
 #: templates/CRM/Financial/Page/BatchTransaction.tpl
 msgid "Are you sure you want to close and export this batch?"
-msgstr ""
+msgstr "Da li ste sigurni da želite da zatvorite i eksportujete ovu seriju?"
 
 #: templates/CRM/Financial/Page/FinancialAccount.tpl
 msgid ""
@@ -860,7 +860,7 @@ msgstr "Tip računa"
 #: templates/CRM/Financial/Page/FinancialAccount.tpl
 msgid ""
 "There are no Financial Account entered. You can <a href='%1'>add one</a>."
-msgstr ""
+msgstr "Nema unetih finansijskih računa. Možete  <a href='%1'>dodati jedan</a>."
 
 #: templates/CRM/Financial/Page/FinancialBatch.hlp
 msgid ""
@@ -928,13 +928,13 @@ msgstr "Tip računa (šifra)"
 
 #: templates/CRM/Financial/Page/FinancialTypeAccount.tpl
 msgid "Owned By"
-msgstr ""
+msgstr "U vlasništvu"
 
 #: templates/CRM/Financial/Page/FinancialTypeAccount.tpl
 msgid ""
 "There are no financial accounts assigned to this financial type. You can <a "
 "href='%1'>assign one</a>."
-msgstr ""
+msgstr "Nema finansijskih računa dodeljenih ovom finansijskom tipu. Možete <a href='%1'>dodati jedan</a>."
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Payment Method:"
@@ -995,7 +995,7 @@ msgstr "Administracija pristupa tipovima finansija"
 
 #: CRM/Financial/BAO/FinancialTypeAccount.php
 msgid "This financial account cannot have '%1' relationship."
-msgstr ""
+msgstr "Ovaj finansijski račun ne može imati '%1' vezu"
 
 #: CRM/Financial/DAO/Currency.php
 msgid "Currency ID"
@@ -1069,7 +1069,7 @@ msgstr ""
 
 #: templates/CRM/Financial/Form/FinancialAccount.hlp
 msgid "Financial Account Owner"
-msgstr ""
+msgstr "Finansijski račun u vlasništvu"
 
 #: templates/CRM/Financial/Form/FinancialAccount.hlp
 msgid ""
