po: update po/sr_RS@latin/mailing.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/mailing.po
+++ b/po/sr_RS@latin/mailing.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-19 06:26+0000\n"
+"PO-Revision-Date: 2017-01-22 21:43+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -32,7 +32,7 @@ msgstr "Polje \"%1\" je obavezno."
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid "Field \"body_html\" or \"body_text\" is required."
-msgstr ""
+msgstr "Polje \"body_html\" ili \"body_text\" je obavezno."
 
 #: CRM/Mailing/BAO/Mailing.php CRM/Mailing/Form/Upload.php
 msgid "This message is missing a required token - {%1}: %2"
@@ -119,7 +119,7 @@ msgstr ""
 #: CRM/Mailing/BAO/Query.php CRM/Mailing/Selector/Event.php
 #: templates/CRM/Mailing/Page/Report.tpl
 msgid "Opt-out Requests"
-msgstr ""
+msgstr "Zahteva za isključenje"
 
 #: CRM/Mailing/BAO/Query.php
 msgid "Mailing: "
@@ -440,7 +440,7 @@ msgstr "Telefon primalaca"
 
 #: CRM/Mailing/DAO/Spool.php
 msgid "Headers"
-msgstr ""
+msgstr "Zaglavlja"
 
 #: CRM/Mailing/DAO/Spool.php
 msgid "Body"
@@ -565,7 +565,7 @@ msgstr "Mailing komponenta '%1' je sačuvana."
 #: CRM/Mailing/Form/Component.php
 msgid ""
 "This token can only be used in send mailing context (body, header, footer).."
-msgstr ""
+msgstr "Ovaj token se može koristiti prilikom slanja mailinga (sadržaj, zaglavlje, podnožje).."
 
 #: CRM/Mailing/Form/Component.php
 msgid "This message is having a invalid token - %1: %2"
@@ -1264,7 +1264,7 @@ msgstr ""
 
 #: ang/crmMailing/BlockReview.html ang/crmMailingAB/EditCtrl/report.html
 msgid "Click Throughs"
-msgstr ""
+msgstr "Klikova"
 
 #: ang/crmMailing/BlockReview.html ang/crmMailingAB/EditCtrl/report.html
 msgid "Opens"
@@ -1336,7 +1336,7 @@ msgstr "Definiši mailing"
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 #: ang/crmMailingAB/EditCtrl/edit.html
 msgid "Header and Footer"
-msgstr ""
+msgstr "Zaglavlje i podnožje"
 
 #: ang/crmMailing/EditMailingCtrl/2step.html
 #: ang/crmMailing/EditMailingCtrl/unified.html
@@ -1423,7 +1423,7 @@ msgstr ""
 
 #: ang/crmMailing/EditRecipOptionsDialogCtrl.html
 msgid "Selection Method"
-msgstr ""
+msgstr "Metod selekcije"
 
 #: ang/crmMailing/EmailAddrCtrl.js
 msgid "Conflict"
@@ -1445,7 +1445,7 @@ msgstr "Mailing mora da sadrži adresu organizacije. Molimo unesite token %1."
 msgid ""
 "The mailing must allow recipients to (a) unsubscribe from the mailing-list or (b) completely opt-out from all\n"
 "  mailings. Please insert an unsubscribe or opt-out token."
-msgstr ""
+msgstr "Mailing mora da omogući primaocima da se (a) odjave sa mailing liste ili (b) u potpunosti isključe iz svih\nmailinga. Molimo dodajte token za odjavu ili isključenje."
 
 #: ang/crmMailing/EmailBodyCtrl/tokenAlert.html
 msgid "Via Web"
@@ -1459,7 +1459,7 @@ msgstr ""
 msgid ""
 "Alternatively, you may select a header or footer which includes the required"
 " tokens."
-msgstr ""
+msgstr "Takođe možete izabrati zaglavlje ili podnožje u koje su uključeni neophodni tokeni."
 
 #: ang/crmMailing/EmailBodyCtrl.js
 msgid "Required tokens"
@@ -1495,7 +1495,7 @@ msgstr "Zakazani datum i vreme su u prošlosti"
 
 #: ang/crmMailing/Recipients.html
 msgid "Mandatory Group"
-msgstr ""
+msgstr "Obavezna grupa"
 
 #: ang/crmMailing/Recipients.html
 msgid "Include Group"
@@ -1600,7 +1600,7 @@ msgstr "Tip testa"
 
 #: ang/crmMailingAB/BlockSetup.html
 msgid "Distribution"
-msgstr ""
+msgstr "Distribucija"
 
 #: ang/crmMailingAB/BlockSetup.html
 msgid "Send"
@@ -1632,7 +1632,7 @@ msgstr "Podešavanje"
 
 #: ang/crmMailingAB/EditCtrl/edit.html
 msgid "Target"
-msgstr ""
+msgstr "Cilj"
 
 #: ang/crmMailingAB/EditCtrl/edit.html
 msgid "Compose"
@@ -1695,15 +1695,15 @@ msgstr "Nije završeno"
 
 #: ang/crmMailingAB/EditCtrl/report.html
 msgid "Search for contacts using '%1'"
-msgstr ""
+msgstr "Pretraži kontakte koristeći '%1'"
 
 #: ang/crmMailingAB/EditCtrl/report.html
 msgid "Browse events of type '%1'"
-msgstr ""
+msgstr "Pregledaj događaje tipa '%1'"
 
 #: ang/crmMailingAB/EditCtrl/report.html
 msgid "n/a"
-msgstr ""
+msgstr "nedostupno"
 
 #: ang/crmMailingAB/EditCtrl/report.html
 msgid "Reports for  '%1'"
@@ -2090,7 +2090,7 @@ msgstr ""
 
 #: templates/CRM/Mailing/Form/Settings.tpl templates/CRM/Mailing/MailingUI.hlp
 msgid "Track the number of times recipients click each link in this mailing."
-msgstr ""
+msgstr "Prati koliko puta su primaoci kliknuli na svaki link u mailingu."
 
 #: templates/CRM/Mailing/Form/Settings.tpl templates/CRM/Mailing/MailingUI.hlp
 msgid ""
@@ -2271,12 +2271,12 @@ msgstr ""
 
 #: templates/CRM/Mailing/Form/Upload.tpl
 msgid "Header / Footer"
-msgstr ""
+msgstr "Zaglavlje / podnožje"
 
 #: templates/CRM/Mailing/Form/Upload.tpl templates/CRM/Mailing/MailingUI.hlp
 msgid ""
 "You may choose to include a pre-configured Header block above your message."
-msgstr ""
+msgstr "Možete odabrati već napravljeno zaglavlje koje će biti prikazano iznad vaše poruke"
 
 #: templates/CRM/Mailing/Form/Upload.tpl templates/CRM/Mailing/MailingUI.hlp
 msgid ""
@@ -2463,11 +2463,11 @@ msgstr "Grupe za odjavu"
 
 #: templates/CRM/Mailing/Page/Report.tpl
 msgid "Click-through Summary"
-msgstr ""
+msgstr "Kratak pregled klikova"
 
 #: templates/CRM/Mailing/Page/Report.tpl
 msgid "Unique Clicks"
-msgstr ""
+msgstr "Jedinstvenih klikova"
 
 #: templates/CRM/Mailing/Page/Report.tpl
 msgid "Success Rate"
@@ -2495,7 +2495,7 @@ msgstr ""
 
 #: templates/CRM/Mailing/Page/Report.tpl
 msgid "Open tracking"
-msgstr ""
+msgstr "Praćenje otvaranja"
 
 #: templates/CRM/Mailing/Page/Report.tpl
 msgid "URL Click-through tracking"
@@ -2503,7 +2503,7 @@ msgstr ""
 
 #: templates/CRM/Mailing/Page/Resubscribe.tpl
 msgid "has been successfully resubscribed."
-msgstr ""
+msgstr "će uspešno ponovo prijavljen/a"
 
 #: templates/CRM/Mailing/Page/Resubscribe.tpl
 msgid "Are you sure you want to resubscribe: %1 (%2)"
@@ -2511,7 +2511,7 @@ msgstr "Da li ste sigurni da želite da ponovo prijavite: %1 (%2)"
 
 #: templates/CRM/Mailing/Page/Tab.tpl
 msgid "Opens/ Clicks"
-msgstr ""
+msgstr "Otvaranja/ klikovi"
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid "Document Body"
@@ -2601,22 +2601,22 @@ msgstr ""
 
 #: CRM/Mailing/Selector/Event.php
 msgid "Total Tracked Opens"
-msgstr ""
+msgstr "Ukupno ispraćenih otvaranja"
 
 #: ang/crmMailing/BlockReview.html ang/crmMailingAB/EditCtrl/report.html
 msgid "Click-Throughs"
-msgstr ""
+msgstr "Klikova"
 
 #: ang/crmMailing/BlockTracking.html
 msgid "Track Click-Throughs"
-msgstr ""
+msgstr "Prati klikove"
 
 #: ang/crmMailing/EmailBodyCtrl/tokenAlert.html
 msgid ""
 "The mailing must allow recipients to (a) unsubscribe from the mailing-list "
 "or (b) completely opt-out from all mailings. Please insert an unsubscribe or"
 " opt-out token."
-msgstr ""
+msgstr "Mailing mora da omogući primaocima da se (a) odjave sa mailing liste ili (b) u potpunosti isključe iz svih mailinga. Molimo dodajte token za odjavu ili isključenje."
 
 #: ang/crmMailingAB/EditCtrl/report.html
 msgid "Reports for '%1'"
