--- a/po/cy_GB/mailing.po
+++ b/po/cy_GB/mailing.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-20 16:03+0000\n"
+"PO-Revision-Date: 2017-01-23 17:45+0000\n"
 "Last-Translator: Robin Farrar <hogyndrwg@gmail.com>\n"
 "Language-Team: Welsh (United Kingdom) (http://www.transifex.com/civicrm/civicrm/language/cy_GB/)\n"
 "MIME-Version: 1.0\n"
@@ -572,144 +572,144 @@ msgstr "Mae tocyn annilys gan y neges hon - %1: %2"
 
 #: CRM/Mailing/Form/Component.php
 msgid "The following errors were detected in %1 message:"
-msgstr ""
+msgstr "Canfyddwyd y gwallau canlynol yn neges %1 :"
 
 #: CRM/Mailing/Form/Component.php
 msgid "More information on tokens..."
-msgstr ""
+msgstr "Rhagor o wybodaeth ynglŷn â thocynnau..."
 
 #: CRM/Mailing/Form/ForwardMailing.php
 msgid "Invalid form parameters."
-msgstr ""
+msgstr "Paramadrau ffurflen annilys."
 
 #: CRM/Mailing/Form/ForwardMailing.php
 msgid "Forward Mailing: %1"
-msgstr ""
+msgstr "Gyrru'r Postiad ymlaen: %1"
 
 #: CRM/Mailing/Form/ForwardMailing.php
 msgid "Email %1"
-msgstr ""
+msgstr "Ebost %1"
 
 #: CRM/Mailing/Form/ForwardMailing.php
 msgid "Forward"
-msgstr ""
+msgstr "Anfon Ymlaen"
 
 #: CRM/Mailing/Form/ForwardMailing.php
 msgid "Mailing is not forwarded to the given email address."
 msgid_plural "Mailing is not forwarded to the given email addresses."
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
-msgstr[3] ""
+msgstr[0] "Ni anfonir y postiad ymaeln i'r cyfeiriad ebost a roddir."
+msgstr[1] "Ni anfonir y postiad ymaeln i'r cyfeiriadau ebost a roddir."
+msgstr[2] "Ni anfonir y postiad ymaeln i'r cyfeiriadau ebost a roddir."
+msgstr[3] "Ni anfonir y postiad ymaeln i'r cyfeiriadau ebost a roddir."
 
 #: CRM/Mailing/Form/ForwardMailing.php
 msgid "Mailing is forwarded successfully to %count email address."
 msgid_plural "Mailing is forwarded successfully to %count email addresses."
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
-msgstr[3] ""
+msgstr[0] "Anfonwyd y postiad ymlaen yn llwyddianus at %count cyfeiriad ebost."
+msgstr[1] "Anfonwyd y postiad ymlaen yn llwyddianus at %count gyfeiriad ebost."
+msgstr[2] "Anfonwyd y postiad ymlaen yn llwyddianus at %count cyfeiriad ebost."
+msgstr[3] "Anfonwyd y postiad ymlaen yn llwyddianus at %count cyfeiriad ebost."
 
 #: CRM/Mailing/Form/Group.php
 msgid ""
 "The <a href=\"%1\">default mailbox</a> has not been configured. You will "
 "find <a href=\"%2\">more info in our online user and administrator "
 "guide.</a>"
-msgstr ""
+msgstr "Nid yw'r <a href=\"%1\">blwch postio di-ofyn</a> wedi ei ffurfweddu. Mae <a href=\"%2\">rhagor o wybodaeth i'w gael yn ein canllaw ar-lein ar gyfer defnyddwyr a gweinyddwyr.</a>"
 
 #: CRM/Mailing/Form/Group.php
 msgid "Name Your Mailing"
-msgstr ""
+msgstr "Enwi eich postiad"
 
 #: CRM/Mailing/Form/Group.php
 msgid "Remove duplicate emails?"
-msgstr ""
+msgstr "Dileu ebyst wedi eu dyblygu?"
 
 #: CRM/Mailing/Form/Group.php
 msgid "Unsubscription Group"
-msgstr ""
+msgstr "Grŵp Dad-danysgrifio"
 
 #: CRM/Mailing/Form/Group.php
 msgid "INCLUDE Recipients of These Mailing(s)"
-msgstr ""
+msgstr "CYNNWYS Derbyniwyr y Postiad(au) hyn"
 
 #: CRM/Mailing/Form/Group.php
 msgid "EXCLUDE Recipients of These Mailing(s)"
-msgstr ""
+msgstr "EITHRIO Derbyniwyr y Postiad(au) Yma"
 
 #: CRM/Mailing/Form/Group.php CRM/Mailing/Form/Settings.php
 #: CRM/Mailing/Form/Test.php CRM/Mailing/Form/Upload.php
 msgid ""
 "You can continue later by clicking the 'Continue' action to resume working "
 "on it.<br />From <a href='%1'>Draft and Unscheduled Mailings</a>."
-msgstr ""
+msgstr "Gallech barhau hwyrach trwy glicio gweithred 'Parhau' er mwyn ail-afael â gwaith arno. <br />O <a href='%1'>Postiadau Drafft a heb eu Hamserlennu</a>."
 
 #: CRM/Mailing/Form/Group.php CRM/Mailing/Form/Schedule.php
 #: CRM/Mailing/Form/Settings.php CRM/Mailing/Form/Test.php
 #: CRM/Mailing/Form/Upload.php
 msgid "Click the 'Continue' action to resume working on it."
-msgstr ""
+msgstr "Cliciwch ar weithred 'Parhau' er mwyn dechrau gweithio arno eto."
 
 #: CRM/Mailing/Form/Group.php CRM/Mailing/Form/Schedule.php
 #: CRM/Mailing/Form/Settings.php CRM/Mailing/Form/Test.php
 #: CRM/Mailing/Form/Upload.php
 msgid "Mailing Saved"
-msgstr ""
+msgstr "Safiwyd y Postiad"
 
 #: CRM/Mailing/Form/Group.php
 msgid "Cannot have same mail in Include mailing(s) and Exclude mailing(s)."
-msgstr ""
+msgstr "Ni all yr un ebost fod yn y postiad(au) i'w Cynnwys a'r postiad(au) i'w Eithrio."
 
 #: CRM/Mailing/Form/Group.php
 msgid "You must select a group to filter on"
-msgstr ""
+msgstr "Mae'n rhaid i chi ddewis grŵp i hidlo arno"
 
 #: CRM/Mailing/Form/Group.php
 msgid "You must select a search to filter"
-msgstr ""
+msgstr "Mae'n rhaid i chi ddewis chwiliad i'w hidlo"
 
 #: CRM/Mailing/Form/Group.php
 msgid ""
 "If 'Email Selection Method' is automatic, you are not allowed to choose any "
 "'Location Type'"
-msgstr ""
+msgstr "Os yw'r 'Dull Dewis Ebost' yn awtomatig, ni chewch ddewis unrhyw 'Fath o Leoliad'"
 
 #: CRM/Mailing/Form/Group.php
 msgid ""
 "If 'Location Type' is not selected, you must set the 'Email Selection "
 "Method' to automatic as well."
-msgstr ""
+msgstr "Os na ddewisir 'Math o Leoliad,' mae'n rhaid i chi osod 'Dull Dewis Ebost' awtomatig hefyd."
 
 #: CRM/Mailing/Form/Optout.php CRM/Mailing/Form/Unsubscribe.php
 #: CRM/Mailing/Page/Common.php
 msgid "There was an error in your request"
-msgstr ""
+msgstr "Roedd yna wall yn eich cais"
 
 #: CRM/Mailing/Form/Optout.php
 msgid "Please Confirm Your Opt Out"
-msgstr ""
+msgstr "Cadarnhewch Eich Bod Am Adael y Rhestr"
 
 #: CRM/Mailing/Form/Optout.php
 msgid "Verify email address to opt out:"
-msgstr ""
+msgstr "Cadarnhewch gyfeiriad ebost er mwyn gadael y rhestr:"
 
 #: CRM/Mailing/Form/Optout.php
 msgid "Email address is required to opt out."
-msgstr ""
+msgstr "Mae angen cyfeiriad ebost er mwyn gadal y rhestr."
 
 #: CRM/Mailing/Form/Optout.php
 msgid "Email: %1 has been successfully opted out"
-msgstr ""
+msgstr "Ebost: %1 wedi ei dynnu o'r rhestr yn llwyddiannus"
 
 #: CRM/Mailing/Form/Optout.php
 msgid ""
 "The email address: %1 you have entered does not match the email associated "
 "with this opt out request."
-msgstr ""
+msgstr "Nid yw'r cyfeiriad ebost: %1 rydych wedi ei ddarparu yn cyd-fynd a'r ebost sy'n gysylltiedig â'r cais hwn i adael y rhestr."
 
 #: CRM/Mailing/Form/Schedule.php
 msgid "Schedule Mailing"
-msgstr ""
+msgstr "Amseru Postiad"
 
 #: CRM/Mailing/Form/Schedule.php ang/crmMailing/EditMailingCtrl/2step.html
 #: ang/crmMailing/EditMailingCtrl/unified.html
@@ -718,261 +718,261 @@ msgstr ""
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 #: ang/crmMailingAB/EditCtrl/edit.html
 msgid "Submit Mailing"
-msgstr ""
+msgstr "Cyflwyno Postiad"
 
 #: CRM/Mailing/Form/Schedule.php
 msgid ""
 "Your mailing has been saved. You can continue later by clicking the "
 "'Continue' action to resume working on it.<br />From <a href='%1'>Draft and "
 "Unscheduled Mailings</a>."
-msgstr ""
+msgstr "Mae eich postiad wedi ei safio. Gallech barhau hwyrach trwy glicio ar y weithred 'Parhau' er mwyn dechrau gweithio arno eto. <br />O <a href='%1'>Postiadau Drafft ac Heb eu Hamseru</a>."
 
 #: CRM/Mailing/Form/Search.php CRM/Mailing/Selector/Browse.php
 msgid "SMS Name"
-msgstr ""
+msgstr "Enw SMS"
 
 #: CRM/Mailing/Form/Search.php
 msgid "Created or Sent by"
-msgstr ""
+msgstr "Crëwyd neu Anfonwyd gan"
 
 #: CRM/Mailing/Form/Search.php
 msgid "Draft / Unscheduled"
-msgstr ""
+msgstr "Drafft / Heb eu hamseru"
 
 #: CRM/Mailing/Form/Search.php
 msgid "Mailing is Archived"
-msgstr ""
+msgstr "Postiad wedi ei Archifio"
 
 #: CRM/Mailing/Form/Settings.php
 msgid "Track Replies?"
-msgstr ""
+msgstr "Tracio Atebion?"
 
 #: CRM/Mailing/Form/Settings.php
 msgid "Forward Replies?"
-msgstr ""
+msgstr "Anfon Atebion Ymlaen?"
 
 #: CRM/Mailing/Form/Settings.php
 msgid "Track Click-throughs?"
-msgstr ""
+msgstr "Tracio Cliciadau drwodd?"
 
 #: CRM/Mailing/Form/Settings.php
 msgid "Track Opens?"
-msgstr ""
+msgstr "Tracio Pan Gaiff ei Agor?"
 
 #: CRM/Mailing/Form/Settings.php
 msgid "Auto-respond to Replies?"
-msgstr ""
+msgstr "Ateb yn Awtomatig i Ymatebion?"
 
 #: CRM/Mailing/Form/Settings.php
 msgid "Track and Respond"
-msgstr ""
+msgstr "Tracio ac Ymateb"
 
 #: CRM/Mailing/Form/Subscribe.php
 msgid "Subscribe to Mailing List - %1"
-msgstr ""
+msgstr "Tanysgrifio i Restr Bostio - %1"
 
 #: CRM/Mailing/Form/Subscribe.php
 msgid "Mailing List Subscription"
-msgstr ""
+msgstr "Tanysgrifiad Rhestr Bostio"
 
 #: CRM/Mailing/Form/Subscribe.php
 msgid "There are no public mailing list groups to display."
-msgstr ""
+msgstr "Nid oes rhestrau postio cyhoeddus i'w dangos."
 
 #: CRM/Mailing/Form/Subscribe.php
 msgid "Subscribe"
-msgstr ""
+msgstr "Tanysgrifio"
 
 #: CRM/Mailing/Form/Task/Print.php CRM/Mailing/Task.php
 msgid "Print Mailing Recipients"
-msgstr ""
+msgstr "Argraffu Derbynwyr y Postiad"
 
 #: CRM/Mailing/Form/Test.php
 msgid "Send to This Address"
-msgstr ""
+msgstr "Anfon at y Cyfeiriad Hwn"
 
 #: CRM/Mailing/Form/Test.php
 msgid "Send to This Group"
-msgstr ""
+msgstr "Anfon at y Grŵp Hwn"
 
 #: CRM/Mailing/Form/Test.php
 msgid "Send a Test Mailing"
-msgstr ""
+msgstr "Anfon Postiad Prawf"
 
 #: CRM/Mailing/Form/Test.php
 msgid "Inform Scheduler"
-msgstr ""
+msgstr "Hysbysu'r Teclyn Amseru"
 
 #: CRM/Mailing/Form/Test.php
 msgid "You did not provide an email address or select a group."
-msgstr ""
+msgstr "Wnaethoch chi ddim rhoi cyfeiriad ebost neu dewis grŵp."
 
 #: CRM/Mailing/Form/Test.php
 msgid "Test not sent."
-msgstr ""
+msgstr "Ni anfonwyd y prawf."
 
 #: CRM/Mailing/Form/Test.php
 msgid ""
 "You can not schedule or send this mailing because there are currently no "
 "recipients selected. Click 'Previous' to return to the Select Recipients "
 "step, OR click 'Save & Continue Later'."
-msgstr ""
+msgstr "Gallech chi ddim ail-amseru neu anfon y postiad oherwydd nad oes derbynwyr wedi eu dewis eto. Cliciwch 'Blaenorol' er mwyn dychwelyd i gam Dewis Derbyniwyr, NEU clicliwch 'Safio a Pharhau Hwyrach'."
 
 #: CRM/Mailing/Form/Test.php
 msgid ""
 "Click 'Next' when you are ready to Schedule or Send your live mailing (you "
 "will still have a chance to confirm or cancel sending this mailing on the "
 "next page)."
-msgstr ""
+msgstr "Cliciwch 'Nesaf' pan rydych yn barod i Amseru neu Anfon eich postiad byw (bydd dal cyfle gennych chi i gadarnhau neu ganslo'r postiad ar y dudalen nesaf)."
 
 #: CRM/Mailing/Form/Test.php
 msgid "Test message sent"
-msgstr ""
+msgstr "Anfonwyd neges brawf"
 
 #: CRM/Mailing/Form/Unsubscribe.php
 msgid "Missing Parameters"
-msgstr ""
+msgstr "Paramedrau ar Goll"
 
 #: CRM/Mailing/Form/Unsubscribe.php
 msgid ""
 "Email: %1 has been successfully unsubscribed from this Mailing List/Group."
-msgstr ""
+msgstr "Ebost: %1 wedi ei dad-danysgrifio o'r Rhestr/Grŵp Postio yn llwyddiannus."
 
 #: CRM/Mailing/Form/Unsubscribe.php
 msgid "Please Confirm Your Unsubscribe from this Mailing/Group"
-msgstr ""
+msgstr "Cadarnhewch Eich bod am Dad-danysgrifio o'r Postiad/Grŵp hwn"
 
 #: CRM/Mailing/Form/Unsubscribe.php
 msgid "Verify email address to unsubscribe:"
-msgstr ""
+msgstr "Cadarnewch gyfeiriad ebost er mwyn dad-danysgrifio:"
 
 #: CRM/Mailing/Form/Unsubscribe.php
 msgid "Email address is required to unsubscribe."
-msgstr ""
+msgstr "Mae angen cyfeiriad ebost er mwyn dad-danysgrifio."
 
 #: CRM/Mailing/Form/Unsubscribe.php
 msgid ""
 "The email address: %1 you have entered does not match the email associated "
 "with this unsubscribe request."
-msgstr ""
+msgstr "Nid yw'r cyfeiriad ebost: %1 rydych wedi ei ddarparu yn cyd-fynd a'r ebost sy'n gysylltiedig â'r cais hwn i ddad-danysgrifio."
 
 #: CRM/Mailing/Form/Upload.php
 msgid ""
 "There is no valid from email address present. You can add here <a "
 "href='%1'>Add From Email Address.</a>"
-msgstr ""
+msgstr "Nid oes cyfeiriad ebost \"oddi wrth\" dilys yn bresennol. Gallech ychwanegu yma <a href='%1'>Ychwanegu Ebsot Oddi Wrth.</a>"
 
 #: CRM/Mailing/Form/Upload.php ang/crmMailing/BlockMailing.html
 #: ang/crmMailing/EmailAddrCtrl.js ang/crmMailingAB/BlockMailing.html
 #: templates/CRM/Mailing/Form/Upload.tpl
 msgid "Reply-To"
-msgstr ""
+msgstr "Ateb-I"
 
 #: CRM/Mailing/Form/Upload.php CRM/Mailing/Selector/Search.php
 #: templates/CRM/Mailing/Form/Task/Print.tpl
 msgid "Mailing Subject"
-msgstr ""
+msgstr "Penawd y Postiad"
 
 #: CRM/Mailing/Form/Upload.php
 msgid "Upload HTML Message"
-msgstr ""
+msgstr "Uwchlwytho Neges HTML"
 
 #: CRM/Mailing/Form/Upload.php
 msgid "Please provide either a Text or HTML formatted message - or both."
-msgstr ""
+msgstr "Darparwch neges ar fformat Testun neu HTML - neu'r ddau."
 
 #: CRM/Mailing/Form/Upload.php
 msgid "More information on required tokens..."
-msgstr ""
+msgstr "Rhagor o wybodaeth ynglŷn â thocynnau sydd eu hangen..."
 
 #: CRM/Mailing/Form/Upload.php
 msgid "Mailing Content"
-msgstr ""
+msgstr "Cynnwys y Postiad"
 
 #: CRM/Mailing/Info.php
 msgid "access CiviMail"
-msgstr ""
+msgstr "mynd at CiviMail"
 
 #: CRM/Mailing/Info.php
 msgid "access CiviMail subscribe/unsubscribe pages"
-msgstr ""
+msgstr "mynd at dudalennau tanysgrifio/dad-danysgrifio CiviMail"
 
 #: CRM/Mailing/Info.php
 msgid "Subscribe/unsubscribe from mailing list group"
-msgstr ""
+msgstr "Tanysgrifio/dad-danysgrifio â grŵp rhestr bostio"
 
 #: CRM/Mailing/Info.php
 msgid "delete in CiviMail"
-msgstr ""
+msgstr "dileu yn CiviMail"
 
 #: CRM/Mailing/Info.php CRM/Mailing/Page/Browse.php
 #: CRM/Mailing/Selector/Browse.php
 msgid "Delete Mailing"
-msgstr ""
+msgstr "Dileu'r Postiad"
 
 #: CRM/Mailing/Info.php
 msgid "view public CiviMail content"
-msgstr ""
+msgstr "gweld cynnwys cyhoeddus CiviMail"
 
 #: CRM/Mailing/Info.php
 msgid "create mailings"
-msgstr ""
+msgstr "creu postiadau"
 
 #: CRM/Mailing/Info.php
 msgid "schedule mailings"
-msgstr ""
+msgstr "amseru postiadau"
 
 #: CRM/Mailing/Info.php
 msgid "approve mailings"
-msgstr ""
+msgstr "cymeradwyo postiadau"
 
 #: CRM/Mailing/Page/Browse.php CRM/Mailing/Selector/Browse.php
 msgid "Cancel Mailing"
-msgstr ""
+msgstr "Canslo Postiad"
 
 #: CRM/Mailing/Page/Browse.php CRM/Mailing/Selector/Browse.php
 msgid "Archive Mailing"
-msgstr ""
+msgstr "Archifio Postiad"
 
 #: CRM/Mailing/Page/Browse.php
 msgid "Find Mass SMS"
-msgstr ""
+msgstr "Canfod SMS Torfol"
 
 #: CRM/Mailing/Page/Browse.php
 msgid "Search Mailings"
-msgstr ""
+msgstr "Chwilio Postiadau"
 
 #: CRM/Mailing/Page/Component.php templates/CRM/Mailing/Form/Component.tpl
 msgid "Edit Mailing Component"
-msgstr ""
+msgstr "Golygu Cydran Bostiad"
 
 #: CRM/Mailing/Page/Component.php
 msgid "Disable Mailing Component"
-msgstr ""
+msgstr "Analluogi Cydran Bostiad"
 
 #: CRM/Mailing/Page/Component.php
 msgid "Enable Mailing Component"
-msgstr ""
+msgstr "Galluogi Cydran Bostiad"
 
 #: CRM/Mailing/Page/Event.php CRM/Mailing/Page/Report.php
 msgid "Back to Activities"
-msgstr ""
+msgstr "Yn ôl i Weithgareddau"
 
 #: CRM/Mailing/Page/Event.php CRM/Mailing/Page/Report.php
 msgid "Back to Mailing"
-msgstr ""
+msgstr "Yn ôl i'r Postiad"
 
 #: CRM/Mailing/Page/Event.php
 msgid "Back to Report"
-msgstr ""
+msgstr "Yn ôl i'r Adroddiad"
 
 #: CRM/Mailing/Page/Report.php
 msgid "Back to Activity"
-msgstr ""
+msgstr "Yn ôl i'r Weithgaredd"
 
 #: CRM/Mailing/Page/Report.php
 msgid "Back to CiviMail"
-msgstr ""
+msgstr "Yn ôl i CiviMail"
 
 #: CRM/Mailing/Page/Report.php
 msgid "CiviMail Report: %1"
